fix layout on mobile

--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -25,6 +25,7 @@
     border: none;
     border-radius: 20px;
     padding: 12px;
+    font-size: 18px;
 }
 
 #originalText:focus {
