--- a/src/pages/TextPage/TextPage.css
+++ b/src/pages/TextPage/TextPage.css
@@ -1,7 +1,7 @@
 #paper {
     white-space: pre-wrap;
     color: var(--black);
-    padding: 30px;
+    padding: 25px;
     background-image: url('../../assets/paper.jpg');
     background-repeat: repeat;
     min-height: 30vh;
@@ -21,9 +21,23 @@
 }
 
 @media (max-width: 1100px) {
+    .explanation {
+        align-self: flex-start;
+    }
     .reading {
         flex-direction: column-reverse;
         align-items: center;
         justify-content: center;
+    }
+    #paper {
+        width: 90vw;
+        font-size: 18px;
+        padding: 20px;
+    }
+}
+
+@media (max-width: 650px) {
+    #paper {
+        width: 80vw;
     }
 }
